// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SunClockCircle at 2:02 pm with long daylight hours 1`] = `
<svg
  height="100%"
  viewBox="0 0 600 600"
  width="100%"
>
  <g
    className="jsx-394911249"
  >
    <path
      className="jsx-394911249"
      d="M 469.91398874134404 456.15272748123516 A 230.76923076923077 230.76923076923077 0 1 0 127.82173906842755 453.6524790961794"
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      markerEnd="url(#triangle)"
      stroke="black"
      strokeWidth={2}
      x1={300}
      x2={392.24672401943866}
      y1={300}
      y2={143.42217783833937}
    />
  </g>
  <svg
    overflow="visible"
    viewBox="0 0 520.85297 647.1869624999999"
    width={50.769230769230774}
    x={394.53873876729426}
    xmlns="http://www.w3.org/2000/svg"
    y={-186.69576318128435}
  >
    <g
      transform="translate(-28.846153846153847, -28.846153846153847)"
    >
      <path
        clipRule="evenodd"
        d="m 260.49299,0 -45.914,46.3192 -60.768,-23.7673 -22.957,61.0381 -64.954995,2.9726 3.782,64.9555 L 11.344,180.6864 41.322,238.6192 0,288.9902 l 50.91,40.7819 -17.285,62.7936 63.063995,16.4756 9.858005,64.4142 64.27999,-10.5327 35.11,54.8268 54.42201,-35.7865 54.42099,35.7865 35.246,-54.8268 64.279,10.5327 9.85801,-64.4142 63.065,-16.4756 -17.286,-62.7936 50.911,-40.7819 -41.458,-50.371 30.115,-57.9328 -58.338,-29.1683 3.913,-64.9555 L 389.861,83.59 366.904,22.5519 306.27,46.3192 260.49,0 Z m 0,73.4619 c 103.919,0 188.113,84.193 188.113,188.1126 0,103.9189 -84.194,188.247 -188.113,188.247 -103.919,0 -188.111995,-84.3281 -188.111995,-188.247 0,-103.9196 84.192995,-188.1126 188.111995,-188.1126 z m 0,28.4937 c -88.086,0 -159.618,71.5329 -159.618,159.6189 0,88.1546 71.463,159.6182 159.618,159.6182 88.15501,0 159.619,-71.4636 159.619,-159.6182 -0.07,-88.086 -71.464,-159.6189 -159.619,-159.6189 z"
        fillRule="evenodd"
      />
    </g>
  </svg>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"00:00"}
      x1={300}
      x2={300}
      y1={501.9230769230769}
      y2={492.3076923076923}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      time={"00:00"}
      x={300}
      y={480.7692307692308}
    >
      12 am
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"02:00"}
      x1={199.0384615384615}
      x2={203.8461538461538}
      y1={474.8705142257039}
      y2={466.5433468816228}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"04:00"}
      x1={125.12948577429606}
      x2={133.4566531183772}
      y1={400.96153846153857}
      y2={396.15384615384625}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"06:00"}
      x1={98.07692307692307}
      x2={107.69230769230768}
      y1={300.00000000000006}
      y2={300.00000000000006}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      time={"06:00"}
      x={132.69230769230768}
      y={300.00000000000006}
    >
      6 am
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"08:00"}
      x1={125.12948577429606}
      x2={133.45665311837718}
      y1={199.0384615384615}
      y2={203.8461538461538}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"10:00"}
      x1={199.03846153846143}
      x2={203.84615384615375}
      y1={125.12948577429609}
      y2={133.45665311837723}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"12:00"}
      x1={300}
      x2={300}
      y1={98.07692307692307}
      y2={107.69230769230768}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      time={"12:00"}
      x={300}
      y={119.23076923076923}
    >
      12 pm
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"14:00"}
      x1={400.96153846153845}
      x2={396.15384615384613}
      y1={125.12948577429603}
      y2={133.45665311837715}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"16:00"}
      x1={474.8705142257039}
      x2={466.5433468816228}
      y1={199.0384615384615}
      y2={203.8461538461538}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"18:00"}
      x1={501.9230769230769}
      x2={492.3076923076923}
      y1={300}
      y2={300}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      time={"18:00"}
      x={467.3076923076923}
      y={300}
    >
      6 pm
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"20:00"}
      x1={474.87051422570397}
      x2={466.5433468816228}
      y1={400.96153846153845}
      y2={396.15384615384613}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"22:00"}
      x1={400.96153846153845}
      x2={396.15384615384613}
      y1={474.87051422570397}
      y2={466.5433468816228}
    />
  </g>
  <g
    className="jsx-372574030"
  >
    <path
      className="jsx-372574030"
      d="M 134.6878416265959 461.01654624214575 A 230.76923076923077 230.76923076923077 0 0 0 462.9409819657618 463.4156487789825"
    />
  </g>
</svg>
`;

exports[`Storyshots SunClockCircle at 3:02 am with long nighttime hours 1`] = `
<svg
  height="100%"
  viewBox="0 0 600 600"
  width="100%"
>
  <g
    className="jsx-394911249"
  >
    <path
      className="jsx-394911249"
      d="M 522.9925942013953 240.59679468955946 A 230.76923076923077 230.76923076923077 0 0 0 165.18677428450803 112.70389207993054"
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      markerEnd="url(#triangle)"
      stroke="black"
      strokeWidth={2}
      x1={300}
      x2={170.37118446295077}
      y1={300}
      y2={427.367353225498}
    />
  </g>
  <svg
    overflow="visible"
    viewBox="0 0 520.85297 647.1869624999999"
    width={50.769230769230774}
    x={115.60948903913813}
    xmlns="http://www.w3.org/2000/svg"
    y={170.2638858768579}
  >
    <g
      transform="translate(-28.846153846153847, -28.846153846153847)"
    >
      <path
        clipRule="evenodd"
        d="m 260.49299,0 -45.914,46.3192 -60.768,-23.7673 -22.957,61.0381 -64.954995,2.9726 3.782,64.9555 L 11.344,180.6864 41.322,238.6192 0,288.9902 l 50.91,40.7819 -17.285,62.7936 63.063995,16.4756 9.858005,64.4142 64.27999,-10.5327 35.11,54.8268 54.42201,-35.7865 54.42099,35.7865 35.246,-54.8268 64.279,10.5327 9.85801,-64.4142 63.065,-16.4756 -17.286,-62.7936 50.911,-40.7819 -41.458,-50.371 30.115,-57.9328 -58.338,-29.1683 3.913,-64.9555 L 389.861,83.59 366.904,22.5519 306.27,46.3192 260.49,0 Z m 0,73.4619 c 103.919,0 188.113,84.193 188.113,188.1126 0,103.9189 -84.194,188.247 -188.113,188.247 -103.919,0 -188.111995,-84.3281 -188.111995,-188.247 0,-103.9196 84.192995,-188.1126 188.111995,-188.1126 z m 0,28.4937 c -88.086,0 -159.618,71.5329 -159.618,159.6189 0,88.1546 71.463,159.6182 159.618,159.6182 88.15501,0 159.619,-71.4636 159.619,-159.6182 -0.07,-88.086 -71.464,-159.6189 -159.619,-159.6189 z"
        fillRule="evenodd"
      />
    </g>
  </svg>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"00:00"}
      x1={300}
      x2={300}
      y1={501.9230769230769}
      y2={492.3076923076923}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      time={"00:00"}
      x={300}
      y={480.7692307692308}
    >
      12 am
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"02:00"}
      x1={199.0384615384615}
      x2={203.8461538461538}
      y1={474.8705142257039}
      y2={466.5433468816228}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"04:00"}
      x1={125.12948577429606}
      x2={133.4566531183772}
      y1={400.96153846153857}
      y2={396.15384615384625}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"06:00"}
      x1={98.07692307692307}
      x2={107.69230769230768}
      y1={300.00000000000006}
      y2={300.00000000000006}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      time={"06:00"}
      x={132.69230769230768}
      y={300.00000000000006}
    >
      6 am
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"08:00"}
      x1={125.12948577429606}
      x2={133.45665311837718}
      y1={199.0384615384615}
      y2={203.8461538461538}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"10:00"}
      x1={199.03846153846143}
      x2={203.84615384615375}
      y1={125.12948577429609}
      y2={133.45665311837723}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"12:00"}
      x1={300}
      x2={300}
      y1={98.07692307692307}
      y2={107.69230769230768}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      time={"12:00"}
      x={300}
      y={119.23076923076923}
    >
      12 pm
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"14:00"}
      x1={400.96153846153845}
      x2={396.15384615384613}
      y1={125.12948577429603}
      y2={133.45665311837715}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"16:00"}
      x1={474.8705142257039}
      x2={466.5433468816228}
      y1={199.0384615384615}
      y2={203.8461538461538}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"18:00"}
      x1={501.9230769230769}
      x2={492.3076923076923}
      y1={300}
      y2={300}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      time={"18:00"}
      x={467.3076923076923}
      y={300}
    >
      6 pm
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"20:00"}
      x1={474.87051422570397}
      x2={466.5433468816228}
      y1={400.96153846153845}
      y2={396.15384615384613}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"22:00"}
      x1={400.96153846153845}
      x2={396.15384615384613}
      y1={474.87051422570397}
      y2={466.5433468816228}
    />
  </g>
  <g
    className="jsx-372574030"
  >
    <path
      className="jsx-372574030"
      d="M 157.1453451198389 118.76262678770541 A 230.76923076923077 230.76923076923077 0 1 0 525.3714860860075 250.38013372441426"
    />
  </g>
</svg>
`;

exports[`Storyshots SunClockCircle at 4:35 pm with setting sun and speed 127617 1`] = `
<svg
  height="100%"
  viewBox="0 0 600 600"
  width="100%"
>
  <g
    className="jsx-394911249"
  >
    <path
      className="jsx-394911249"
      d="M 515.3090502394108 216.95512806424864 A 230.76923076923077 230.76923076923077 0 1 0 142.6034898920493 468.7624853919267"
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      markerEnd="url(#triangle)"
      stroke="black"
      strokeWidth={2}
      x1={300}
      x2={469.379296487144}
      y1={300}
      y2={234.1461739401022}
    />
  </g>
  <svg
    overflow="visible"
    viewBox="0 0 520.85297 647.1869624999999"
    width={50.769230769230774}
    x={491.50540129812384}
    xmlns="http://www.w3.org/2000/svg"
    y={-72.64273951049677}
  >
    <g
      transform="translate(-28.846153846153847, -28.846153846153847)"
    >
      <path
        clipRule="evenodd"
        d="m 260.49299,0 -45.914,46.3192 -60.768,-23.7673 -22.957,61.0381 -64.954995,2.9726 3.782,64.9555 L 11.344,180.6864 41.322,238.6192 0,288.9902 l 50.91,40.7819 -17.285,62.7936 63.063995,16.4756 9.858005,64.4142 64.27999,-10.5327 35.11,54.8268 54.42201,-35.7865 54.42099,35.7865 35.246,-54.8268 64.279,10.5327 9.85801,-64.4142 63.065,-16.4756 -17.286,-62.7936 50.911,-40.7819 -41.458,-50.371 30.115,-57.9328 -58.338,-29.1683 3.913,-64.9555 L 389.861,83.59 366.904,22.5519 306.27,46.3192 260.49,0 Z m 0,73.4619 c 103.919,0 188.113,84.193 188.113,188.1126 0,103.9189 -84.194,188.247 -188.113,188.247 -103.919,0 -188.111995,-84.3281 -188.111995,-188.247 0,-103.9196 84.192995,-188.1126 188.111995,-188.1126 z m 0,28.4937 c -88.086,0 -159.618,71.5329 -159.618,159.6189 0,88.1546 71.463,159.6182 159.618,159.6182 88.15501,0 159.619,-71.4636 159.619,-159.6182 -0.07,-88.086 -71.464,-159.6189 -159.619,-159.6189 z"
        fillRule="evenodd"
      />
    </g>
  </svg>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"00:00"}
      x1={300}
      x2={300}
      y1={501.9230769230769}
      y2={492.3076923076923}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      time={"00:00"}
      x={300}
      y={480.7692307692308}
    >
      12 am
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"02:00"}
      x1={199.0384615384615}
      x2={203.8461538461538}
      y1={474.8705142257039}
      y2={466.5433468816228}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"04:00"}
      x1={125.12948577429606}
      x2={133.4566531183772}
      y1={400.96153846153857}
      y2={396.15384615384625}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"06:00"}
      x1={98.07692307692307}
      x2={107.69230769230768}
      y1={300.00000000000006}
      y2={300.00000000000006}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      time={"06:00"}
      x={132.69230769230768}
      y={300.00000000000006}
    >
      6 am
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"08:00"}
      x1={125.12948577429606}
      x2={133.45665311837718}
      y1={199.0384615384615}
      y2={203.8461538461538}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"10:00"}
      x1={199.03846153846143}
      x2={203.84615384615375}
      y1={125.12948577429609}
      y2={133.45665311837723}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"12:00"}
      x1={300}
      x2={300}
      y1={98.07692307692307}
      y2={107.69230769230768}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      time={"12:00"}
      x={300}
      y={119.23076923076923}
    >
      12 pm
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"14:00"}
      x1={400.96153846153845}
      x2={396.15384615384613}
      y1={125.12948577429603}
      y2={133.45665311837715}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"16:00"}
      x1={474.8705142257039}
      x2={466.5433468816228}
      y1={199.0384615384615}
      y2={203.8461538461538}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"18:00"}
      x1={501.9230769230769}
      x2={492.3076923076923}
      y1={300}
      y2={300}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      time={"18:00"}
      x={467.3076923076923}
      y={300}
    >
      6 pm
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"20:00"}
      x1={474.87051422570397}
      x2={466.5433468816228}
      y1={400.96153846153845}
      y2={396.15384615384613}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"22:00"}
      x1={400.96153846153845}
      x2={396.15384615384613}
      y1={474.87051422570397}
      y2={466.5433468816228}
    />
  </g>
  <g
    className="jsx-372574030"
  >
    <path
      className="jsx-372574030"
      d="M 150.11461271650828 475.4674002448893 A 230.76923076923077 230.76923076923077 0 0 0 518.7264901698326 226.42581724674992"
    />
  </g>
</svg>
`;

exports[`Storyshots SunClockCircle at 7:02 am with rising sun 1`] = `
<svg
  height="100%"
  viewBox="0 0 600 600"
  width="100%"
>
  <g
    className="jsx-394911249"
  >
    <path
      className="jsx-394911249"
      d="M 473.9213066964693 148.32331442566675 A 230.76923076923077 230.76923076923077 0 0 0 77.09838418088367 240.25631803236803"
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      markerEnd="url(#triangle)"
      stroke="black"
      strokeWidth={2}
      x1={300}
      x2={124.88222872540831}
      y1={300}
      y2={251.4218292951773}
    />
  </g>
  <svg
    overflow="visible"
    viewBox="0 0 520.85297 647.1869624999999"
    width={50.769230769230774}
    x={58.42337325479902}
    xmlns="http://www.w3.org/2000/svg"
    y={-50.92477277840237}
  >
    <g
      transform="translate(-28.846153846153847, -28.846153846153847)"
    >
      <path
        clipRule="evenodd"
        d="m 260.49299,0 -45.914,46.3192 -60.768,-23.7673 -22.957,61.0381 -64.954995,2.9726 3.782,64.9555 L 11.344,180.6864 41.322,238.6192 0,288.9902 l 50.91,40.7819 -17.285,62.7936 63.063995,16.4756 9.858005,64.4142 64.27999,-10.5327 35.11,54.8268 54.42201,-35.7865 54.42099,35.7865 35.246,-54.8268 64.279,10.5327 9.85801,-64.4142 63.065,-16.4756 -17.286,-62.7936 50.911,-40.7819 -41.458,-50.371 30.115,-57.9328 -58.338,-29.1683 3.913,-64.9555 L 389.861,83.59 366.904,22.5519 306.27,46.3192 260.49,0 Z m 0,73.4619 c 103.919,0 188.113,84.193 188.113,188.1126 0,103.9189 -84.194,188.247 -188.113,188.247 -103.919,0 -188.111995,-84.3281 -188.111995,-188.247 0,-103.9196 84.192995,-188.1126 188.111995,-188.1126 z m 0,28.4937 c -88.086,0 -159.618,71.5329 -159.618,159.6189 0,88.1546 71.463,159.6182 159.618,159.6182 88.15501,0 159.619,-71.4636 159.619,-159.6182 -0.07,-88.086 -71.464,-159.6189 -159.619,-159.6189 z"
        fillRule="evenodd"
      />
    </g>
  </svg>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"00:00"}
      x1={300}
      x2={300}
      y1={501.9230769230769}
      y2={492.3076923076923}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      time={"00:00"}
      x={300}
      y={480.7692307692308}
    >
      12 am
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"02:00"}
      x1={199.0384615384615}
      x2={203.8461538461538}
      y1={474.8705142257039}
      y2={466.5433468816228}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"04:00"}
      x1={125.12948577429606}
      x2={133.4566531183772}
      y1={400.96153846153857}
      y2={396.15384615384625}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"06:00"}
      x1={98.07692307692307}
      x2={107.69230769230768}
      y1={300.00000000000006}
      y2={300.00000000000006}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      time={"06:00"}
      x={132.69230769230768}
      y={300.00000000000006}
    >
      6 am
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"08:00"}
      x1={125.12948577429606}
      x2={133.45665311837718}
      y1={199.0384615384615}
      y2={203.8461538461538}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"10:00"}
      x1={199.03846153846143}
      x2={203.84615384615375}
      y1={125.12948577429609}
      y2={133.45665311837723}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"12:00"}
      x1={300}
      x2={300}
      y1={98.07692307692307}
      y2={107.69230769230768}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      time={"12:00"}
      x={300}
      y={119.23076923076923}
    >
      12 pm
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"14:00"}
      x1={400.96153846153845}
      x2={396.15384615384613}
      y1={125.12948577429603}
      y2={133.45665311837715}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"16:00"}
      x1={474.8705142257039}
      x2={466.5433468816228}
      y1={199.0384615384615}
      y2={203.8461538461538}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"18:00"}
      x1={501.9230769230769}
      x2={492.3076923076923}
      y1={300}
      y2={300}
    />
    <text
      alignmentBaseline="central"
      fontSize="23.698288508769075px"
      textAnchor="middle"
      time={"18:00"}
      x={467.3076923076923}
      y={300}
    >
      6 pm
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"20:00"}
      x1={474.87051422570397}
      x2={466.5433468816228}
      y1={400.96153846153845}
      y2={396.15384615384613}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      time={"22:00"}
      x1={400.96153846153845}
      x2={396.15384615384613}
      y1={474.87051422570397}
      y2={466.5433468816228}
    />
  </g>
  <g
    className="jsx-372574030"
  >
    <path
      className="jsx-372574030"
      d="M 74.70455432181174 250.0360127042586 A 230.76923076923077 230.76923076923077 0 1 0 480.3718162526576 156.05401786941044"
    />
  </g>
</svg>
`;

exports[`Storyshots SunClockCircle on January 1st with speed 127618 1`] = `
<svg
  height="100%"
  viewBox="0 0 600 600"
  width="100%"
>
  <g
    className="jsx-394911249"
  >
    <path
      className="jsx-394911249"
      d="M 515.3090502394108 216.95512806424864 A 230.76923076923077 230.76923076923077 0 1 0 142.6034898920493 468.7624853919267"
    />
  </g>
  <g>
    <line
      date={1901-02-21T17:00:00.000Z}
      stroke="black"
      strokeWidth={4}
      x1={122.90481719734774}
      x2={131.33792114033116}
      y1={397.00631537264996}
      y2={392.38696702157137}
    />
  </g>
  <g>
    <line
      date={1901-03-21T16:00:00.000Z}
      stroke="black"
      strokeWidth={4}
      x1={98.11385753307286}
      x2={107.72748336483127}
      y1={303.86192619122113}
      y2={303.67802494402014}
    />
    <text
      alignmentBaseline="central"
      date={1901-03-21T16:00:00.000Z}
      fontSize="23.698288508769075px"
      textAnchor="middle"
      x={146.181986691865}
      y={303.45734344737895}
    >
      Mar 21
    </text>
  </g>
  <g>
    <line
      date={1901-04-21T16:00:00.000Z}
      stroke="black"
      strokeWidth={4}
      x1={124.21945204698858}
      x2={132.5899543304653}
      y1={200.63135325756977}
      y2={205.3631935786379}
    />
  </g>
  <g>
    <line
      date={1901-05-21T16:00:00.000Z}
      stroke="black"
      strokeWidth={4}
      x1={196.208908860424}
      x2={201.1513417718324}
      y1={126.79394238613051}
      y2={135.04184989155286}
    />
  </g>
  <g>
    <line
      date={1901-06-21T16:00:00.000Z}
      stroke="black"
      strokeWidth={4}
      x1={298.74480553959233}
      x2={298.80457670437363}
      y1={98.08082438522732}
      y2={107.69602322402602}
    />
    <text
      alignmentBaseline="central"
      date={1901-06-21T16:00:00.000Z}
      fontSize="23.698288508769075px"
      textAnchor="middle"
      x={299.0436613634989}
      y={119.23426183058447}
    >
      Jun 21
    </text>
  </g>
  <g>
    <line
      date={1901-07-21T16:00:00.000Z}
      stroke="black"
      strokeWidth={4}
      x1={398.6112482426964}
      x2={393.9154745168537}
      y1={123.79344304453323}
      y2={132.18423147098403}
    />
  </g>
  <g>
    <line
      date={1901-08-21T16:00:00.000Z}
      stroke="black"
      strokeWidth={4}
      x1={474.53159610458056}
      x2={466.2205677186481}
      y1={198.45370043536587}
      y2={203.28923850987223}
    />
  </g>
  <g>
    <line
      date={1901-09-21T16:00:00.000Z}
      stroke="black"
      strokeWidth={4}
      x1={501.91855233115825}
      x2={492.3033831725317}
      y1={301.35174648959566}
      y2={301.28737760913873}
    />
    <text
      alignmentBaseline="central"
      date={1901-09-21T16:00:00.000Z}
      fontSize="23.698288508769075px"
      textAnchor="middle"
      x={453.84270653802537}
      y={301.2101349525904}
    >
      Sep 21
    </text>
  </g>
  <g>
    <line
      date={1901-10-21T16:00:00.000Z}
      stroke="black"
      strokeWidth={4}
      x1={474.9187712528267}
      x2={466.5893059550731}
      y1={400.8779086692628}
      y2={396.07419873263126}
    />
  </g>
  <g>
    <line
      date={1901-11-21T17:00:00.000Z}
      stroke="black"
      strokeWidth={4}
      x1={399.28458197926807}
      x2={394.55674474216005}
      y1={475.8280431992714}
      y2={467.4552792374013}
    />
  </g>
  <g>
    <line
      date={1901-12-21T17:00:00.000Z}
      stroke="black"
      strokeWidth={4}
      x1={299.5172302506125}
      x2={299.5402192862976}
      y1={501.92249980488043}
      y2={492.30714267131464}
    />
    <text
      alignmentBaseline="central"
      date={1901-12-21T17:00:00.000Z}
      fontSize="23.698288508769075px"
      textAnchor="middle"
      x={299.6321754290381}
      y={480.76871411103576}
    >
      Dec 21
    </text>
  </g>
  <g>
    <line
      date={1902-01-21T17:00:00.000Z}
      stroke="black"
      strokeWidth={4}
      x1={196.87224550540213}
      x2={201.78309095752584}
      y1={473.60182961877103}
      y2={465.33507582740094}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      markerEnd="url(#triangle)"
      stroke="black"
      strokeWidth={2}
      x1={300}
      x2={265.36678651721326}
      y1={300}
      y2={478.4001485679393}
    />
  </g>
  <g
    className="jsx-372574030"
  >
    <path
      className="jsx-372574030"
      d="M 150.11461271650828 475.4674002448893 A 230.76923076923077 230.76923076923077 0 0 0 518.7264901698326 226.42581724674992"
    />
  </g>
</svg>
`;

exports[`Storyshots SunClockCircle on June 20 with speed 127618 1`] = `
<svg
  height="100%"
  viewBox="0 0 600 600"
  width="100%"
>
  <g
    className="jsx-394911249"
  >
    <path
      className="jsx-394911249"
      d="M 515.3090502394108 216.95512806424864 A 230.76923076923077 230.76923076923077 0 1 0 142.6034898920493 468.7624853919267"
    />
  </g>
  <g>
    <line
      date={1901-02-21T17:00:00.000Z}
      stroke="black"
      strokeWidth={4}
      x1={122.90481719734774}
      x2={131.33792114033116}
      y1={397.00631537264996}
      y2={392.38696702157137}
    />
  </g>
  <g>
    <line
      date={1901-03-21T16:00:00.000Z}
      stroke="black"
      strokeWidth={4}
      x1={98.11385753307286}
      x2={107.72748336483127}
      y1={303.86192619122113}
      y2={303.67802494402014}
    />
    <text
      alignmentBaseline="central"
      date={1901-03-21T16:00:00.000Z}
      fontSize="23.698288508769075px"
      textAnchor="middle"
      x={146.181986691865}
      y={303.45734344737895}
    >
      Mar 21
    </text>
  </g>
  <g>
    <line
      date={1901-04-21T16:00:00.000Z}
      stroke="black"
      strokeWidth={4}
      x1={124.21945204698858}
      x2={132.5899543304653}
      y1={200.63135325756977}
      y2={205.3631935786379}
    />
  </g>
  <g>
    <line
      date={1901-05-21T16:00:00.000Z}
      stroke="black"
      strokeWidth={4}
      x1={196.208908860424}
      x2={201.1513417718324}
      y1={126.79394238613051}
      y2={135.04184989155286}
    />
  </g>
  <g>
    <line
      date={1901-06-21T16:00:00.000Z}
      stroke="black"
      strokeWidth={4}
      x1={298.74480553959233}
      x2={298.80457670437363}
      y1={98.08082438522732}
      y2={107.69602322402602}
    />
    <text
      alignmentBaseline="central"
      date={1901-06-21T16:00:00.000Z}
      fontSize="23.698288508769075px"
      textAnchor="middle"
      x={299.0436613634989}
      y={119.23426183058447}
    >
      Jun 21
    </text>
  </g>
  <g>
    <line
      date={1901-07-21T16:00:00.000Z}
      stroke="black"
      strokeWidth={4}
      x1={398.6112482426964}
      x2={393.9154745168537}
      y1={123.79344304453323}
      y2={132.18423147098403}
    />
  </g>
  <g>
    <line
      date={1901-08-21T16:00:00.000Z}
      stroke="black"
      strokeWidth={4}
      x1={474.53159610458056}
      x2={466.2205677186481}
      y1={198.45370043536587}
      y2={203.28923850987223}
    />
  </g>
  <g>
    <line
      date={1901-09-21T16:00:00.000Z}
      stroke="black"
      strokeWidth={4}
      x1={501.91855233115825}
      x2={492.3033831725317}
      y1={301.35174648959566}
      y2={301.28737760913873}
    />
    <text
      alignmentBaseline="central"
      date={1901-09-21T16:00:00.000Z}
      fontSize="23.698288508769075px"
      textAnchor="middle"
      x={453.84270653802537}
      y={301.2101349525904}
    >
      Sep 21
    </text>
  </g>
  <g>
    <line
      date={1901-10-21T16:00:00.000Z}
      stroke="black"
      strokeWidth={4}
      x1={474.9187712528267}
      x2={466.5893059550731}
      y1={400.8779086692628}
      y2={396.07419873263126}
    />
  </g>
  <g>
    <line
      date={1901-11-21T17:00:00.000Z}
      stroke="black"
      strokeWidth={4}
      x1={399.28458197926807}
      x2={394.55674474216005}
      y1={475.8280431992714}
      y2={467.4552792374013}
    />
  </g>
  <g>
    <line
      date={1901-12-21T17:00:00.000Z}
      stroke="black"
      strokeWidth={4}
      x1={299.5172302506125}
      x2={299.5402192862976}
      y1={501.92249980488043}
      y2={492.30714267131464}
    />
    <text
      alignmentBaseline="central"
      date={1901-12-21T17:00:00.000Z}
      fontSize="23.698288508769075px"
      textAnchor="middle"
      x={299.6321754290381}
      y={480.76871411103576}
    >
      Dec 21
    </text>
  </g>
  <g>
    <line
      date={1902-01-21T17:00:00.000Z}
      stroke="black"
      strokeWidth={4}
      x1={196.87224550540213}
      x2={201.78309095752584}
      y1={473.60182961877103}
      y2={465.33507582740094}
    />
  </g>
  <g>
    <defs>
      <marker
        id="triangle"
        markerHeight="6"
        markerWidth="6"
        orient="auto"
        refX="1"
        refY="5"
        viewBox="0 0 10 10"
      >
        <path
          d="M 0 0 L 10 5 L 0 10 z"
        />
      </marker>
    </defs>
    <line
      markerEnd="url(#triangle)"
      stroke="black"
      strokeWidth={2}
      x1={300}
      x2={295.74235634308195}
      y1={300}
      y2={118.31911229934559}
    />
  </g>
  <g
    className="jsx-372574030"
  >
    <path
      className="jsx-372574030"
      d="M 150.11461271650828 475.4674002448893 A 230.76923076923077 230.76923076923077 0 0 0 518.7264901698326 226.42581724674992"
    />
  </g>
</svg>
`;
